chapter logo & css based icons
SVN-Revision: 7102

--- a/doc_test/box_wrapper/xhtml/document_to_test_formatting/test.html
+++ b/doc_test/box_wrapper/xhtml/document_to_test_formatting/test.html
@@ -43,15 +43,21 @@
       </div>
     </div>
     <div class="spirit-nav">
-      <a accesskey="p" href="images.html">
-        <img src="../images/prev.png" alt="Prev" />
-      </a>
-      <a accesskey="u" href="../index.html">
-        <img src="../images/up.png" alt="Up" />
-      </a>
-      <a accesskey="h" href="../index.html">
-        <img src="../images/home.png" alt="Home" />
-      </a>
+      <div class="spirit-nav-icon">
+        <a accesskey="p" href="images.html">
+          <div class="prev-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="u" href="../index.html">
+          <div class="up-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="h" href="../index.html">
+          <div class="home-icon"></div>
+        </a>
+      </div>
     </div>
     <div id="body">
       <div id="body-inner">
@@ -79,20 +85,27 @@
       </div>
     </div>
     <div class="spirit-nav">
-      <a accesskey="p" href="images.html">
-        <img src="../images/prev.png" alt="Prev" />
-      </a>
-      <a accesskey="u" href="../index.html">
-        <img src="../images/up.png" alt="Up" />
-      </a>
-      <a accesskey="h" href="../index.html">
-        <img src="../images/home.png" alt="Home" />
-      </a>
+      <div class="spirit-nav-icon">
+        <a accesskey="p" href="images.html">
+          <div class="prev-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="u" href="../index.html">
+          <div class="up-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="h" href="../index.html">
+          <div class="home-icon"></div>
+        </a>
+      </div>
     </div>
     <div id="footer">
       <div id="footer-left">
         <div id="copyright">
-          <p>Copyright © 2007 John Maddock, Joel de Guzman and Eric Niebler</p>
+          <p>Copyright © 2007 John Maddock, Joel de Guzman, Eric Niebler and Matias
+      Capeletto</p>
         </div>
         <div id="license">
           <p>Distributed under the
