--- a/doc_test/box_wrapper/xhtml/index.html
+++ b/doc_test/box_wrapper/xhtml/index.html
@@ -42,9 +42,11 @@
       </div>
     </div>
     <div class="spirit-nav">
-      <a accesskey="n" href="document_to_test_formatting/introduction.html">
-        <img src="images/next.png" alt="Next" />
-      </a>
+      <div class="spirit-nav-icon">
+        <a accesskey="n" href="document_to_test_formatting/introduction.html">
+          <div class="next-icon"></div>
+        </a>
+      </div>
     </div>
     <div id="body">
       <div id="body-inner">
@@ -52,6 +54,9 @@
           <div class="article">
             <div class="titlepage">
               <div>
+                <div class="titlepage_logo">
+                  <img src="images/doctest.png" />
+                </div>
                 <div>
                   <h2 class="title"><a id="document_to_test_formatting"></a>Document To Test Formatting</h2>
                 </div>
@@ -71,11 +76,17 @@
                   </div>
                 </div>
                 <div>
-                  <p class="copyright">Copyright © 2007 John Maddock, Joel de Guzman and Eric Niebler</p>
+                  <div class="author">
+                    <h3 class="author"><span class="firstname">Matias</span> <span class="surname">Capeletto</span></h3>
+                  </div>
+                </div>
+                <div>
+                  <p class="copyright">Copyright © 2007 John Maddock, Joel de Guzman, Eric Niebler and Matias
+      Capeletto</p>
                 </div>
                 <div>
                   <div class="legalnotice">
-                    <a id="id2598610"></a>
+                    <a id="id2603818"></a>
                     <p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at <a href="http://www.boost.org/LICENSE_1_0.txt">http://www.boost.org/LICENSE_1_0.txt</a>)
@@ -83,7 +94,7 @@
                   </div>
                 </div>
               </div>
-              <hr />
+              <div class="titlepage_separator"></div>
             </div>
             <div class="toc">
               <div class="box-outer-wrapper">
@@ -102,48 +113,130 @@
                     </dt>
                     <dt>
                       <span class="section">
-                        <a href="document_to_test_formatting/basic_formatting_tests.html">Basic
-    Formatting Tests</a>
+                        <a href="document_to_test_formatting/code_blocks.html">Code Blocks</a>
                       </span>
                     </dt>
                     <dd>
                       <dl>
                         <dt>
                           <span class="section">
-                            <a href="document_to_test_formatting/basic_formatting_tests.html#document_to_test_formatting.basic_formatting_tests.inline_blocks">Inline
-      blocks</a>
+                            <a href="document_to_test_formatting/code_blocks.html#document_to_test_formatting.code_blocks.embedded_code">Embedded
+      code</a>
                           </span>
                         </dt>
                         <dt>
                           <span class="section">
-                            <a href="document_to_test_formatting/basic_formatting_tests.html#document_to_test_formatting.basic_formatting_tests.lists">Lists</a>
+                            <a href="document_to_test_formatting/code_blocks.html#document_to_test_formatting.code_blocks.imported_code_and_callouts">Imported
+      code and callouts</a>
                           </span>
                         </dt>
                         <dt>
                           <span class="section">
-                            <a href="document_to_test_formatting/basic_formatting_tests.html#document_to_test_formatting.basic_formatting_tests.code_blocks">Code
-      Blocks</a>
+                            <a href="document_to_test_formatting/code_blocks.html#document_to_test_formatting.code_blocks.larger_example">Larger
+      example</a>
+                          </span>
+                        </dt>
+                      </dl>
+                    </dd>
+                    <dt>
+                      <span class="section">
+                        <a href="document_to_test_formatting/basic_formatting.html">Basic Formatting</a>
+                      </span>
+                    </dt>
+                    <dd>
+                      <dl>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/basic_formatting.html#document_to_test_formatting.basic_formatting.font_styles">Font
+      Styles</a>
                           </span>
                         </dt>
                         <dt>
                           <span class="section">
-                            <a href="document_to_test_formatting/basic_formatting_tests.html#document_to_test_formatting.basic_formatting_tests.blurbs">Blurbs</a>
+                            <a href="document_to_test_formatting/basic_formatting.html#document_to_test_formatting.basic_formatting.replaceable_text">Replaceable
+      Text</a>
                           </span>
                         </dt>
                         <dt>
                           <span class="section">
-                            <a href="document_to_test_formatting/basic_formatting_tests.html#document_to_test_formatting.basic_formatting_tests.tables">Tables</a>
+                            <a href="document_to_test_formatting/basic_formatting.html#document_to_test_formatting.basic_formatting.quotations">Quotations</a>
                           </span>
                         </dt>
                         <dt>
                           <span class="section">
-                            <a href="document_to_test_formatting/basic_formatting_tests.html#document_to_test_formatting.basic_formatting_tests.variable_lists">Variable
+                            <a href="document_to_test_formatting/basic_formatting.html#document_to_test_formatting.basic_formatting.inline_code">Inline
+      Code</a>
+                          </span>
+                        </dt>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/basic_formatting.html#document_to_test_formatting.basic_formatting.links">Links</a>
+                          </span>
+                        </dt>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/basic_formatting.html#document_to_test_formatting.basic_formatting.footnotes">Footnotes</a>
+                          </span>
+                        </dt>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/basic_formatting.html#document_to_test_formatting.basic_formatting.blockquote">Blockquote</a>
+                          </span>
+                        </dt>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/basic_formatting.html#document_to_test_formatting.basic_formatting.headings">Headings</a>
+                          </span>
+                        </dt>
+                      </dl>
+                    </dd>
+                    <dt>
+                      <span class="section">
+                        <a href="document_to_test_formatting/blurbs.html">Blurbs</a>
+                      </span>
+                    </dt>
+                    <dd>
+                      <dl>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/blurbs.html#document_to_test_formatting.blurbs.preformatted_text">Preformatted
+      text</a>
+                          </span>
+                        </dt>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/blurbs.html#document_to_test_formatting.blurbs.admonishments">Admonishments</a>
+                          </span>
+                        </dt>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/blurbs.html#document_to_test_formatting.blurbs.blurbs">Blurbs</a>
+                          </span>
+                        </dt>
+                      </dl>
+                    </dd>
+                    <dt>
+                      <span class="section">
+                        <a href="document_to_test_formatting/lists_and_tables.html">Lists and
+    Tables</a>
+                      </span>
+                    </dt>
+                    <dd>
+                      <dl>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/lists_and_tables.html#document_to_test_formatting.lists_and_tables.lists">Lists</a>
+                          </span>
+                        </dt>
+                        <dt>
+                          <span class="section">
+                            <a href="document_to_test_formatting/lists_and_tables.html#document_to_test_formatting.lists_and_tables.variable_lists">Variable
       Lists</a>
                           </span>
                         </dt>
                         <dt>
                           <span class="section">
-                            <a href="document_to_test_formatting/basic_formatting_tests.html#document_to_test_formatting.basic_formatting_tests.callouts">Callouts</a>
+                            <a href="document_to_test_formatting/lists_and_tables.html#document_to_test_formatting.lists_and_tables.tables">Tables</a>
                           </span>
                         </dt>
                       </dl>
@@ -171,13 +264,15 @@
       </div>
     </div>
     <div class="spirit-nav">
-      <a accesskey="n" href="document_to_test_formatting/introduction.html">
-        <img src="images/next.png" alt="Next" />
-      </a>
+      <div class="spirit-nav-icon">
+        <a accesskey="n" href="document_to_test_formatting/introduction.html">
+          <div class="next-icon"></div>
+        </a>
+      </div>
     </div>
     <div id="footer">
       <div id="footer-left">
-        <div id="revised">Revised: June 18, 2007 at 08:28:25 GMT</div>
+        <div id="revised">Revised: June 19, 2007 at 16:26:26 GMT</div>
         <div id="copyright"></div>
         <div id="license">
           <p>Distributed under the
