--- a/doc_test/box_wrapper/xhtml/document_to_test_formatting/introduction.html
+++ b/doc_test/box_wrapper/xhtml/document_to_test_formatting/introduction.html
@@ -9,7 +9,7 @@
     <link rel="start" href="../index.html" title="Document To Test Formatting" />
     <link rel="up" href="../index.html" title="Document To Test Formatting" />
     <link rel="prev" href="../index.html" title="Document To Test Formatting" />
-    <link rel="next" href="basic_formatting_tests.html" title="Basic Formatting Tests" />
+    <link rel="next" href="code_blocks.html" title="Code Blocks" />
   </head>
   <body>
     <script type="text/javascript" src="../grouped_links.js"></script>
@@ -44,18 +44,26 @@
       </div>
     </div>
     <div class="spirit-nav">
-      <a accesskey="p" href="../index.html">
-        <img src="../images/prev.png" alt="Prev" />
-      </a>
-      <a accesskey="u" href="../index.html">
-        <img src="../images/up.png" alt="Up" />
-      </a>
-      <a accesskey="h" href="../index.html">
-        <img src="../images/home.png" alt="Home" />
-      </a>
-      <a accesskey="n" href="basic_formatting_tests.html">
-        <img src="../images/next.png" alt="Next" />
-      </a>
+      <div class="spirit-nav-icon">
+        <a accesskey="p" href="../index.html">
+          <div class="prev-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="u" href="../index.html">
+          <div class="up-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="h" href="../index.html">
+          <div class="home-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="n" href="code_blocks.html">
+          <div class="next-icon"></div>
+        </a>
+      </div>
     </div>
     <div id="body">
       <div id="body-inner">
@@ -109,23 +117,32 @@
       </div>
     </div>
     <div class="spirit-nav">
-      <a accesskey="p" href="../index.html">
-        <img src="../images/prev.png" alt="Prev" />
-      </a>
-      <a accesskey="u" href="../index.html">
-        <img src="../images/up.png" alt="Up" />
-      </a>
-      <a accesskey="h" href="../index.html">
-        <img src="../images/home.png" alt="Home" />
-      </a>
-      <a accesskey="n" href="basic_formatting_tests.html">
-        <img src="../images/next.png" alt="Next" />
-      </a>
+      <div class="spirit-nav-icon">
+        <a accesskey="p" href="../index.html">
+          <div class="prev-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="u" href="../index.html">
+          <div class="up-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="h" href="../index.html">
+          <div class="home-icon"></div>
+        </a>
+      </div>
+      <div class="spirit-nav-icon">
+        <a accesskey="n" href="code_blocks.html">
+          <div class="next-icon"></div>
+        </a>
+      </div>
     </div>
     <div id="footer">
       <div id="footer-left">
         <div id="copyright">
-          <p>Copyright © 2007 John Maddock, Joel de Guzman and Eric Niebler</p>
+          <p>Copyright © 2007 John Maddock, Joel de Guzman, Eric Niebler and Matias
+      Capeletto</p>
         </div>
         <div id="license">
           <p>Distributed under the
