--- a/public_html/beta/index.html
+++ b/public_html/beta/index.html
@@ -1,9 +1,3 @@
-<?php
-require_once(dirname(__FILE__) . '/common/code/boost_feed.php');
-$_news = new boost_feed(dirname(__FILE__) . '/feed/news.rss', '/users/news');
-$_news->sort_by('pubdate');
-$_downloads = new boost_feed(dirname(__FILE__) . '/feed/downloads.rss', '/users/download');
-?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
@@ -26,8 +20,7 @@ http://www.boost.org/development/website_updating.html
 
 <body>
   <div id="heading">
-    <?php virtual("/common/heading.html"); ?>
-  </div>
+    <!--#include virtual="/common/heading.html" -->  </div>
 
   <div id="body">
     <div id="body-inner">
@@ -99,15 +92,17 @@ http://www.boost.org/development/website_updating.html
                   <h2>Downloads</h2>
 
                   <ul id="downloads">
-                    <?php $_count = 0; foreach ( $_downloads->db as $_guid => $_item ) { $_count += 1; if ($_count > 5) { break; } ?>
-
+                    
                     <li><span class=
-                    "news-title"><?php print '<a href="'.$_item['boostbook:download'].'">'; ?><?php print $_item['title']; ?><?php print '</a>'; ?>
-                    (<?php print '<a href="'.$_item['link'].'">'; ?>release notes<?php print '</a>'; ?>)
+                    "news-title"><a href="http://sourceforge.net/projects/boost/files/boost/1.44.0/">Version 1.44.0</a>                    (<a href="/users/download/version_1_44_0">release notes</a>)
                     </span>
                     <span class=
-                    "news-date"><?php print $_item['date']; ?></span></li><?php } ?>
-                  </ul>
+                    "news-date">August 13th, 2010 12:00 GMT</span></li>
+                    <li><span class=
+                    "news-title"><a href="http://sourceforge.net/projects/boost/files/boost-jam/3.1.18/">Boost Jam 3.1.18</a>                    (<a href="/users/download/boost_jam_3_1_18">release notes</a>)
+                    </span>
+                    <span class=
+                    "news-date">March 22nd, 2010 12:00 GMT</span></li>                  </ul>
 
                   <p><a href="/users/download/">More Downloads...</a>
                   (<a href="feed/downloads.rss">RSS</a>)</p>
@@ -117,15 +112,39 @@ http://www.boost.org/development/website_updating.html
                   <h2>News</h2>
 
                   <ul id="news">
-                    <?php $_count = 0; foreach ( $_news->db as $_guid => $_item ) { $_count += 1; if ($_count > 3) { break; } ?>
-
+                    
                     <li><span class=
-                    "news-title"><?php print '<a href="'.$_item['link'].'">'; ?><?php print $_item['title']; ?><?php print '</a>'; ?></span>
+                    "news-title"><a href="/users/news/version_1_44_0">Version 1.44.0</a></span>
                     <span class=
-                    "news-description"><?php print $_item['boostbook:purpose']; ?></span>
+                    "news-description"><span class="brief"><span class="purpose">
+      New Libraries: Meta State Machine, Polygon. Updated Libraries: Accumulators,
+      Asio, Config, Filesystem, Foreach, Fusion, Hash, Iostreams, Math, MPL, Multi-index
+      Containers, Proto, Regex, Spirit, Thread, TR1, Type Traits, uBLAS, Utility,
+      Uuid, Wave, Xpressive. Updates for Quickbook and Boostbook.
+    </span></span></span>
                     <span class=
-                    "news-date"><?php print $_item['date']; ?></span></li><?php } ?>
-                  </ul>
+                    "news-date">August 13th, 2010 12:00 GMT</span></li>
+                    <li><span class=
+                    "news-title"><a href="/users/news/version_1_43_0">Version 1.43.0</a></span>
+                    <span class=
+                    "news-description"><span class="brief"><span class="purpose">
+      New Libraries: Functional/Factory, Functional/Forward. Major Update: Range.
+      Updated Libraries: Accumulators, Array, Asio, Fusion, Iostreams, Multi-index
+      Containers, Proto, Random, Spirit, Thread, Unordered, Uuid, Wave, Xpressive.
+      Also, updates to the build system and quickbook.
+    </span></span></span>
+                    <span class=
+                    "news-date">May 6th, 2010 12:00 GMT</span></li>
+                    <li><span class=
+                    "news-title"><a href="/users/news/version_1_42_0">Version 1.42.0</a></span>
+                    <span class=
+                    "news-description"><span class="brief"><span class="purpose">
+      New Libraries: Uuid. Updated Libraries: Asio, Circular Buffer, Fusion, Graph,
+      Integer, Iostreams, Program.Options, PropertyMap, Proto, Regex, Spirit, Unordered,
+      Xpressive.
+    </span></span></span>
+                    <span class=
+                    "news-date">February 2nd, 2010 14:00 GMT</span></li>                  </ul>
 
                   <p><a href="/users/news/">More News...</a> (<a href=
                   "feed/news.rss">RSS</a>)</p>
@@ -139,8 +158,7 @@ http://www.boost.org/development/website_updating.html
       </div>
 
       <div id="sidebar">
-        <?php virtual("/common/sidebar-common.html"); ?><?php virtual("/common/sidebar-welcome.html"); ?>
-      </div>
+        <!--#include virtual="/common/sidebar-common.html" --><!--#include virtual="/common/sidebar-welcome.html" -->      </div>
 
       <div class="clear"></div>
     </div>
@@ -149,19 +167,17 @@ http://www.boost.org/development/website_updating.html
   <div id="footer">
     <div id="footer-left">
       <div id="revised">
-        <p>Revised $Date$</p>
+        <p>Revised $Date: 2010-08-10 21:32:05 +0100 (Tue, 10 Aug 2010) $</p>
       </div>
 
       <div id="copyright">
         <p>Copyright Beman Dawes, David Abrahams, 1998-2005.</p>
 
         <p>Copyright Rene Rivera 2004-2007.</p>
-      </div><?php virtual("/common/footer-license.html"); ?>
-    </div>
+      </div><!--#include virtual="/common/footer-license.html" -->    </div>
 
     <div id="footer-right">
-      <?php virtual("/common/footer-banners.html"); ?>
-    </div>
+      <!--#include virtual="/common/footer-banners.html" -->    </div>
 
     <div class="clear"></div>
   </div>
